--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "project-software2",
+  "name": "mm",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "file.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon ajax.js"
   },
-  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1381.0",
     "express": "^4.18.2",
-    "express-handlebars": "^7.0.7",
-    "mongoose": "^7.2.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemon": "^2.0.22"
   }
 }
