--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,18 +1,32 @@
 name: publish
+
+
+
 on: [push]
+  
+
+
 jobs:
   publish-hello-docker-image:
-   runs-on: ubuntu-latest
-   steps:
-    - uses: actions/checkout@v2
-    - name: Login to GitHub Container Registry
-    uses: docker/login-action@v1
-    with:
-      registry: ghcr.io
-      username: ${{ secrets.DOCKER_IMG_USER }}
-      password: ${{ secrets.DOCKER_IMG_PASS }}
-    - name: Build the hello-docker Docker image
-    run: |
-       docker build . --tag ghcr.io/deselikem/hello-docker-gcr-demo:latest
-       docker run ghcr.io/deselikem/hello-docker-gcr-demo:latest
-       docker push ghcr.io/deselikem/hello-docker-gcr-demo:latest
+
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Login to GitHub Container Registry
+        uses: actions/checkout@v2
+
+      - name: Build the hello-docker Docker image
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.DOCKER_IMG_USER }}
+          password: ${{ secrets.DOCKER_IMG_PASS }}
+          run: |
+                 docker build . --tag ghcr.io/deselikem/hello-docker-gcr-demo:latest
+                 docker run ghcr.io/deselikem/hello-docker-gcr-demo:latest
+                 docker push ghcr.io/deselikem/hello-docker-gcr-demo:latest
+
+      
