--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ secrets.DOCKER_IMG_USER }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.DOCKER_IMG_PASS }}
           run: |
                  docker build . --tag ghcr.io/deselikem/hello-docker-gcr-demo:latest
