--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,32 +1,29 @@
-name: publish
-
-
-
-on: [push]
-  
-
+name: Create Docker image
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  publish-hello-docker-image:
-
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
-      - name: Login to GitHub Container Registry
+      - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Build the hello-docker Docker image
+      - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ secrets.DOCKER_IMG_USER }}
           password: ${{ secrets.DOCKER_IMG_PASS }}
-          run: |
-                 docker build . --tag ghcr.io/deselikem/hello-docker-gcr-demo:latest
-                 docker run ghcr.io/deselikem/hello-docker-gcr-demo:latest
-                 docker push ghcr.io/deselikem/hello-docker-gcr-demo:latest
 
-      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_IMG_USER }}/chucknorris:latest
